syntax = "proto3";

message SignInInput {
    string email = 1;
    string password = 2;
}